force-app/main/default/objects/Appointment_Schedule__c/Appointment_Schedule__c.object-meta.xml
<CustomObject>
    <label>Appointment Schedule</label>
    <nameField>
        <displayFormat>AS-{000000}</displayFormat>
        <label>Appointment Schedule Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Appointment Schedules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>