force-app/main/default/objects/Appointment_Schedule__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Start Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>