force-app/main/default/objects/Appointment_Schedule__c/fields/Task_Type__c.field-meta.xml
<CustomField>
    <fullName>Task_Type__c</fullName>
    <label>Task Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FAULT_REPAIR</fullName>
            </value>
            <value>
                <fullName>PLANNING</fullName>
            </value>
            <value>
                <fullName>INSTALLATION</fullName>
            </value>
            <value>
                <fullName>WIRING</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>