force-app/main/default/objects/Appointment_Schedule__c/fields/Transaction_ID__c.field-meta.xml
<CustomField>
    <fullName>Transaction_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Transaction ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>